src/rules/pep8_naming/snapshots/ruff__pep8_naming__tests__N816_N816.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    MixedCaseVariableInGlobalScope: mixedCase
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 9
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInGlobalScope: _mixedCase
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 10
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInGlobalScope: mixed_Case
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 10
  fix: ~
  parent: ~

