src/rules/pep8_naming/snapshots/ruff__pep8_naming__tests__N818_N818.py.snap
---
source: src/pep8_naming/mod.rs
expression: checks
---
- kind:
    ErrorSuffixOnExceptionName: C
  location:
    row: 9
    column: 6
  end_location:
    row: 9
    column: 7
  fix: ~
  parent: ~
- kind:
    ErrorSuffixOnExceptionName: E
  location:
    row: 17
    column: 6
  end_location:
    row: 17
    column: 7
  fix: ~
  parent: ~

